@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-13T02:01:46Z",
+  "timestamp" : "2022-09-13T08:24:08Z",
   "count_outdated" : 133,
   "uniques_outdated" : 90,
-  "count" : 140,
-  "uniques" : 96,
+  "count" : 141,
+  "uniques" : 97,
   "clones" : [
     {
       "timestamp": "2022-08-31T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-09-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
