@@ -1,5 +1,5 @@
 {
-  "count": 7,
+  "count": 8,
   "uniques": 5,
   "clones": [
     {
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-09-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
