@@ -1,3 +1,11 @@
+2022-09-13T08:24:08Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043480860
+* notice: last 14d: unq all: 5 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 90 133 / 96 140
+* notice: next accum: outdated-unq outdated-all / unq all: 90 133 / 97 141
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-13]
+
 2022-09-13T02:01:46Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041848793
 * notice: last 14d: unq all: 5 7
